--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,13 +1,14 @@
 [phases.setup]
 cmds = [
     "apt-get update",
-    "apt-get install -y ffmpeg"
+    "apt-get install -y python3-pip ffmpeg",
+    "pip3 --version"
 ]
 
 [phases.install]
 cmds = [
-    "pip install -r requirements.txt"
+    "pip3 install -r requirements.txt"
 ]
 
 [start]
-cmd = "python main.py"
+cmd = "python3 main.py"
