--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-discord.py[voice]>=2.3.0
-yt-dlp>=2024.11.22  # เวอร์ชันล่าสุด
-PyNaCl>=1.5.0
-aiohttp>=3.9.0
+discord.py[voice]==2.3.2
+yt-dlp==2024.10.10
+PyNaCl==1.5.0
